# swin_mask_rcnn

./: .gitignore  CLAUDE.md  README.md  check_labels.py  debug_batch_size.py  inference.py  instructions.md  logging_setup_summary.md  loss_improvements_summary.md  problematic_images.csv  pyproject.toml  temp_predictions.json  test_end_to_end.py  test_lightning_batch.py  test_norm_config.yaml  test_script_import.py  train_cmr.py  train_debug.py  train_final.py
docs/: batch_size_collate_improvements.md  cross_entropy_weight_tensor_fix.md  detection_loss_fixes.md  error_handling_summary.md  fast_training_loops.md  fix_no_predictions_during_inference.md  frozen_backbone_stages.md  loss_comparison_analysis.md  loss_fix_implementation.md  loss_fix_summary.md  loss_fixes_applied.md  loss_improvements_summary.md  max_val_images_feature.md  mmdetection_reference_paths.md  onnx_export_callback.md  prediction_tracking_feature.md  training_observations.md
examples/: __init__.py  inference_example.py  train_coco.py  train_with_frozen_backbone.py  train_with_pretrained.py
plans/: README.md  annotation_format_specification.md  dataset_modifications_plan.md  explicit_background_annotation_plan.md  implementation_roadmap.md  loss_modifications_plan.md  swin_v2_and_modern_attention_upgrade.md
scripts/: __init__.py  check_checkpoint.py  check_cmr_categories.py  check_coco_checkpoint.py  check_initial_loss.py  check_model_norm_structure.py  check_our_checkpoint.py  convert_prints_to_logging.py  create_corrected_checkpoint_v2.py  create_correctly_initialized_checkpoint.py  inference.py  (+31 more)
(+108 files in other folders)
