[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swin_maskrcnn"
version = "0.1.0"
description = "Isolated SWIN-based Mask R-CNN implementation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "pillow>=9.0.0",
    "pycocotools>=2.0.6",
    "albumentations>=1.3.0",
    "tqdm>=4.64.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.0.260",
    "mypy>=1.0.0",
]

[project.scripts]
train-maskrcnn = "swin_maskrcnn.train:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["swin_maskrcnn"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]